2015-06-03  Esa Peuha  <esa.peuha@gmail.com>

	* games/freecell.c: fix display bug.
	* lib/cards.h, lib/stack.c (stack_flip_move_stack): New function.
	* games/solitaire.c, games/thornq.c: Use stack_flip_move_stack
	* games/spider.c: Use stack_flip_move_stack

2015-06-02  Esa Peuha  <esa.peuha@gmail.com>

	* lib/make-imglib.c, lib/xwin.c: Change png_ptr->jmpbuf to
	  png_jmpbuf(png_ptr)
	* lib/xwin.c: Change voidp to png_voidp
	* lib/help.c, lib/imagelib.c, lib/stack.c, lib/table.c, lib/xwin.c:
	  Mark functions and variables static.
	* games/golf.c: fix display bug.

2015-05-31  Esa Peuha  <esa.peuha@gmail.com>

	* INSTALL, config.guess, config.sub, depcomp, install-sh,
	  missing, mkinstalldirs: Update.
	* lib/make-imglib.c (tokenize): Return NULL instead of 0 or
	  nothing.
	* lib/xwin.c (xwin_nextevent): Ignore spurious MotionNotify events.
	* lib/xwin.c (PropMwmHints): Change ints to longs for 64-bit support.

2015-05-28  Esa Peuha  <esa.peuha@gmail.com>

	* aclocal.m4: Regenerate with aclocal 1.14.1
	* games/Makefile.am, lib/Makefile.am, tests/Makefile.am:
	  Change INCLUDES to AM_CPPFLAGS.
	* lib/Makefile.am: Change make-imglib to make-imglib$(EXEEXT)
	  and text2c to text2c$(EXEEXT).
	* compile: New file.
	* Makefile.in, games/Makefile.in, lib/Makefile.in,
	  tests/Makefile.in: Regenerate with automake 1.14.1
	* configure: Regenerate with autoconf 2.69
	* ltmain.sh: Regenerate with libtool 2.4.2

2013-01-12  Esa Peuha  <esa.peuha@gmail.com>

	* lib/stack.c (struct Undo): Change members.
	(stack_note_undo): Change parameters.
	(stack_undo): Reimplement.
	* lib/stack.c (stack_move_cards): Change parameters.
	* lib/cards.h: Change declaration.
	* docs/toolkit.html: Document it.
	* games/freecell.c, games/solitaire.c,
	  games/thornq.c, tests/test4.c: Update.
	* lib/stack.c (stack_drop): Add parameter.
	* lib/cards.h: Change declaration.
	* docs/toolkit.html: Document it.
	* games/canfield.c, games/freecell.c, games/solitaire.c,