@@ -4,6 +4,7 @@
 	* lib/cards.h, lib/stack.c (stack_flip_move_stack): New function.
 	* games/solitaire.c, games/thornq.c: Use stack_flip_move_stack
 	* games/spider.c: Use stack_flip_move_stack
+	* docs/toolkit.html: Document stack_flip_move_stack
 
 2015-06-02  Esa Peuha  <esa.peuha@gmail.com>
 
